@@ -1,3 +1,4 @@
+* Add functionality to search for doc files and put them into %doc.
 * Enable searching archive for files according to given re.
 * Extracted archive handling to a class.
 * Archives can now be searched for files by full path (internal thing only).
